Added a second link

--- a/index.html
+++ b/index.html
@@ -13117,6 +13117,15 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><a href="https://mcatalano26.github.io/Data-Science-Final-Project/">https://mcatalano26.github.io/Data-Science-Final-Project/</a></p>
+<p><a href="https://github.com/mcatalano26/Data-Science-Final-Project">https://github.com/mcatalano26/Data-Science-Final-Project</a></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>The first link is a link to the github.io site. The second link is to the github page where you can easily find all of our data.</p>
 
 </div>
 </div>
